arc: Implement safe access to ArcAuthService.

TEST=Extended browser_tests
TEST=Manually on device with Arc enabled/disabled.
BUG=627137

Review-Url: https://codereview.chromium.org/2149853004
Cr-Commit-Position: refs/heads/master@{#406307}

Former-commit-id: 4b937b462197e87d4ac0c44c0275b7a5350963c0