chrome/browser/chromeos/arc/arc_auth_service.h
@@ -153,6 +153,8 @@ class ArcAuthService : public ArcService,
 
   bool IsArcManaged() const;
   bool IsArcEnabled() const;
+
+  // This requires Arc to be allowed (|IsAllowed|)for current profile.
   void EnableArc();
   void DisableArc();
 
