chrome/browser/chromeos/arc/arc_support_host.h
@@ -44,8 +44,8 @@ class ArcSupportHost : public extensions::NativeMessageHost,
  private:
   ArcSupportHost();
 
+  bool Initialize();
   void OnMetricsPreferenceChanged();
-  void Initialize();
   void SendMetricsMode();
   void EnableMetrics(bool is_enabled);
   void EnableBackupRestore(bool is_enabled);
